<resources>
    <string name="app_name">Pitch In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- EventContainer Submission Strings -->
    <string name="title">Title</string>
    <string name="blurb">Description</string>
    <string name="tags">Tags</string>
    <string name="hint_title">Enter a title here.</string>
    <string name="hint_description">Enter a blurb here.</string>
    <string name="hint_tags">"Extracted" Tag1, Tag2, Tag3...</string>
    <!-- End EventContainer Submission String -->

    <string name="title_activity_map">Map</string>
    <string name="title_activity_event_detail">event_detail</string>

    <string name="hello_world">Hello world!</string>
    <string name="event_details" />
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">First Last</string>
    <string name="location">San Marcos, TX</string>

</resources>
