<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.splitix.dcitizen.EventSubmissionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:layout_below="@+id/title"
        android:hint="@string/hint_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/blurb"
        android:id="@+id/blurb"
        android:layout_below="@+id/edit_title"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="5"
        android:ems="10"
        android:id="@+id/edit_description"
        android:hint="@string/hint_description"

        android:layout_below="@+id/blurb"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_title" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/map_button"
        android:layout_below="@+id/edit_description"
        android:layout_alignParentStart="true"

        android:src="@drawable/temp_map_icon"
        android:background="#00000000"
        android:scaleType="fitXY"
        />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/link_button"
        android:layout_below="@+id/edit_description"
        android:layout_centerHorizontal="true"
        android:src="@drawable/temp_link_icon"
        android:background="#00000000"
        android:scaleType="fitXY"
        />


    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/camera_button"
        android:layout_below="@+id/edit_description"
        android:layout_alignParentRight="true"
        android:src="@drawable/temp_camera_icon"
        android:background="#00000000"
        android:scaleType="fitXY"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tags"
        android:id="@+id/tags"
        android:layout_below="@+id/map_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_tag"
        android:layout_below="@+id/tags"
        android:hint="@string/hint_tags"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/camera_button" />

    <ImageView
        android:layout_width="2000dp"
        android:layout_height="100dp"
        android:id="@+id/submit_button"
        android:layout_alignParentBottom="true"
        android:src="@drawable/Icon_Submit"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
